# oarepo-doi

./: .gitignore  README.md  format.sh  oarepo.yaml  pyproject.toml  run-tests.sh  run.sh  setup.cfg
.github/workflows/: build.yaml  test.yaml
oarepo_doi/: __init__.py  api.py  config.py  doi_mapping_base.py  exceptions.py  ext.py
oarepo_doi/actions/: __init__.py  doi.py
oarepo_doi/alembic/: __init__.py  dbbeab0ad917_create_oarepo_doi_branch.py  settings_tables.py
oarepo_doi/notifications/: __init__.py
oarepo_doi/notifications/builders/: __init__.py  assign_doi.py  delete_doi.py
oarepo_doi/resources/: __init__.py  serializers.py
oarepo_doi/services/: __init__.py  doi_client.py  doi_provider.py  invenio_provider.py  provider.py  relations.py  utils.py
oarepo_doi/services/components/: __init__.py
oarepo_doi/services/providers/: __init__.py  client.py  provider.py
oarepo_doi/settings/: __init__.py  api.py  components.py  facets.py  models.py  permissions.py  proxies.py  resource.py  results.py  schema.py  service.py  tasks.py  views.py
oarepo_doi/settings/administration/: __init__.py  views.py
oarepo_doi/settings/mappings/os-v2/doi-settings/: __init__.py
oarepo_doi/templates/semantic-ui/invenio_notifications/: assign-doi-request-event.accept.jinja  assign-doi-request-event.decline.jinja  assign-doi-request-event.submit.jinja  delete-doi-request-event.accept.jinja  delete-doi-request-event.decline.jinja  delete-doi-request-event.submit.jinja
oarepo_doi/translations/: messages.pot
oarepo_doi/translations/cs/LC_MESSAGES/: messages.mo  messages.po
oarepo_doi/translations/en/LC_MESSAGES/: messages.mo  messages.po
oarepo_doi/types/: __init__.py  doi.py
oarepo_doi/views/: __init__.py  api.py  app.py
tests/: __init__.py  conftest.py  test_notifications.py  test_pids_service.py  test_pids_tasks.py  test_requests.py  thesis.yaml
tests/services/providers/: __init__.py  test_pids_service.py  test_pids_tasks.py
tests/test_provider/: mapping.py  provider.py
