[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oarepo-doi"
version = "7.1.0"
description = "A module for DOI registration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14,<3.15"
dependencies = [
    "oarepo[rdm,tests]>=14.0.0dev0,<15.0.0",
    "oarepo-runtime>=7.0.0,<8.0.0",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",

]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.13",
    "types-PyYAML",
]
tests = [
    "pytest-invenio",
]
oarepo14=[
    "oarepo[rdm]>=14,<15",
]

[project.entry-points."invenio_administration.views"]
oarepo_doi_create = "oarepo_doi.settings.administration.views:DOICreateView"
oarepo_doi_details = "oarepo_doi.settings.administration.views:DOIDetailView"
oarepo_doi_edit = "oarepo_doi.settings.administration.views:DOIEditView"
oarepo_doi_list = "oarepo_doi.settings.administration.views:DOIListView"

[project.entry-points."invenio_base.api_apps"]
oarepodoi = "oarepo_doi.ext:OARepoDOI"

[project.entry-points."invenio_base.api_blueprints"]
oarepo_doi_settings = "oarepo_doi.settings.views:create_api_blueprint"

[project.entry-points."invenio_base.api_finalize_app"]
oarepo_doi = "oarepo_doi.ext:api_finalize_app"

[project.entry-points."invenio_base.apps"]
oarepo_doi = "oarepo_doi.ext:OARepoDOI"

[project.entry-points."invenio_base.blueprints"]
oarepo_doi_settings = "oarepo_doi.settings.views:create_api_blueprint"

[project.entry-points."invenio_base.finalize_app"]
oarepo_doi = "oarepo_doi.ext:finalize_app"

[project.entry-points."invenio_db.alembic"]
oarepo_doi = "oarepo_doi:alembic"

[project.entry-points."invenio_db.models"]
oarepo_doi = "oarepo_doi.settings.models"

[project.entry-points."invenio_i18n.translations"]
oarepo_doi = "oarepo_doi"

[project.entry-points."invenio_search.mappings"]
doi-settings = "oarepo_doi.settings.mappings"


[tool.hatch.build.targets.sdist]
include = [
    "/oarepo_doi",
]
